--- a/app/globals.css
+++ b/app/globals.css
@@ -163,19 +163,19 @@
   }
 
   .profile {
-    @apply relative flex px-6 max-xl:justify-center;
+    @apply relative flex items-center px-6 max-xl:justify-center;
   }
 
   .profile-img {
-    @apply flex-center absolute -top-8 size-24 rounded-full bg-gray-100 border-8 border-white p-2 shadow-profile;
+    @apply flex-center absolute top-10 size-24 rounded-full bg-gray-100 border-8 border-white p-2 shadow-profile;
   }
 
   .profile-details {
-    @apply flex flex-col pt-24;
+    @apply absolute top-20 flex flex-col pt-11;
   }
 
   .profile-name {
-    @apply text-24 font-semibold text-gray-900;
+    @apply text-20 font-semibold text-gray-900;
   }
 
   .profile-email {
